--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Happy Birthday, [陈思颖]!</h1>
+        <h1>Happy Birthday, [NIAN]!</h1>
         <img src="images.jpg" alt="Birthday Cake" class="birthday-cake">
         <p>Wishing you all the best on your special day! May your year be filled with joy, love, and success.</p>
         <button id="surpriseButton">Click for a Surprise</button>
         <div id="surpriseMessage" class="hidden">
             <h2>Surprise!</h2>
-            <p>Here's to many more wonderful years! Enjoy your day!</p>
+            <p>Here's to many more wonderful years! Enjoy your day! Dont be sad, remember I'm always here to make you laugh to death</p>
         </div>
     </div>
     <script src="script.js"></script>
